--- a/lib/index.html
+++ b/lib/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Document XYZ</title>
+    <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
