--- a/lib/index.html
+++ b/lib/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
     <title>Document XYZ</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="style.css">
