--- a/lib/index.html
+++ b/lib/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
+    <meta name="description" content="Fast, secure web3 documents">
     <title>Document XYZ</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="style.css">
