trying to get service worker caching to work

--- a/lib/index.html
+++ b/lib/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <document-container contenteditable="true"></document-container>
+    <script type="module" src="main.js"></script>
     <script type="module" src="document.js"></script>
   </body>
 </html>
